example/L5/NodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: codestar-nodeport-svc
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: proxy
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
