example/L5/Service-wied-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: codestar-service
subsets:
  - addresses:
      - ip: 1.2.3.4
    ports:
      - port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: codestar-service
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
