example/L5/Service-with-namedPort.yaml
apiVersion: v1
kind: Pod
metadata:
  name: codestar-adminer
  labels:
    app.kubernetes.io/name: proxy
spec:
  containers:
  - name: adminer
    image: adminer
    ports:
      - containerPort: 8080
        name: http-web-svc

---
apiVersion: v1
kind: Service
metadata:
  name: codestar-svc-adminer
spec:
  selector:
    app.kubernetes.io/name: proxy
  type: ClusterIP
  ports:
  - name: name-of-service-port
    protocol: TCP
    port: 80
    targetPort: http-web-svc
