example/L5/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codestar-service
spec:
  type: ClusterIP
  selector:
    app: codestar-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
