example/L5/service-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: codestar-nginx
  labels:
    app.kubernetes.io/name: nginx
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
      - containerPort: 80
        name: http-web-svc

---
apiVersion: v1
kind: Service
metadata:
  name: codestar-svc-nginx
spec:
  selector:
    app.kubernetes.io/name: nginx
  type: NodePort
  ports:
  - name: name-of-service-port
    protocol: TCP
    port: 80
    targetPort: http-web-svc
