example/L5/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - host: "foo.bar.com"
    http:
      paths:
      - path: /path1
        pathType: Prefix
        backend:
          service:
            name: codestar-svc-adminer
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: codestar-nodeport-svc
            port:
              number: 80
